@@ -7,12 +7,11 @@ local-install-outfiles:
 local-install-files: $(INSTALLATION_FILES)
 	$(PRE_INSTALL)
 	-$(INSTALL) -d $(DESTDIR)$(INSTALLATION_DIR)
-	for i in $(foreach j,$(INSTALLATION_FILES),$(src-dir)/$(j)); do \
-		$(INSTALL) -m 644 $$i $(DESTDIR)$(INSTALLATION_DIR)/ ; done
+	$(INSTALLPY) -m 644 $(addprefix $(src-dir)/,$(INSTALLATION_FILES)) $(DESTDIR)$(INSTALLATION_DIR)/
+
 	$(foreach suff, $(INSTALLATION_SUFFIXES),  \
 		($(INSTALL) -d $(DESTDIR)$(INSTALLATION_DIR$(suff)) || true) && \
-		for i in $(foreach j,INSTALLATION_FILES$(suff), $(src-dir)/$(j)); do \
-			$(INSTALL) -m 644 $$i $(DESTDIR)$(INSTALLATION_DIR$(suff))/; done )
+		$(INSTALL) -m 644  $(addprefix $(src-dir)/, $(INSTALLATION_FILES$(suff))) $(DESTDIR)$(INSTALLATION_DIR$(suff))/ ) 
 	$(POST_INSTALL)
 
 local-uninstall: local-uninstall-outfiles local-uninstall-files 
